# shuploader

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  uploads.rs
migration/src/: m20220101_000001_create_table.rs
src/: file.rs  main.rs  upload.rs
