[package]
name = "shuploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.3", features = ["multipart"] }
cuid2 = "0.1.2"
image = "0.24.7"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
sea-orm = { version = "0.12", features = [
	"sqlx-postgres",
	"runtime-tokio-rustls",
	"macros",
] }
dotenvy = "0.15.7"
migration = { path = "./migration" }
entity = { path = "./entity" }
axum-extra = { version = "0.9.2", features = ["async-read-body"] }

[workspace]
revolver = "2"
members = ["migration", ".", "entity"]
